Download button mobile margin bottom fixed

--- a/wp-content/themes/happyland/css/responsive.css
+++ b/wp-content/themes/happyland/css/responsive.css
@@ -297,7 +297,7 @@
   }
   /* *************** Download PAge ******************************************* */
   .bg-img-prop-download{
-    margin-bottom: -7px;
+    /* margin-bottom: -7px; */
     padding: 0
   }
   /* *************** Privacy Policy ******************************************* */
